--- a/styles.css
+++ b/styles.css
@@ -908,11 +908,12 @@ footer a {
 
   .homeImgCol {
     margin: 50px auto 0 auto;
+    width: 100%;
   }
 
   .homeImg {
     width: auto;
-    height: 100%;
+    height: auto;
     margin-left: 10px !important;
   }
 
